--- a/Nowy folder/AI.html
+++ b/Nowy folder/AI.html
@@ -121,6 +121,19 @@
     <a href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial Intelligence (AI)</a>
     <a href="https://en.wikipedia.org/wiki/Natural_language_processing">natural language processing</a>
     <a href="https://pl.wikipedia.org/wiki/Siri">Siri</a>
+
+    <h2>Survey</h2>
+
+    <p>Please <a href="file:///C:/Users/aleks/Desktop/Nowy%20folder%20(5)/survey.html">fill out the survey</a> to share your input.</p>
+    <form action="#" method="post">
+
+    <p>Here is a survey about your knowledge
+        of issues related to artificial
+        intelligence. The survey is anonymous.
+        Please fill out the survey. The survey
+        results will be helpful in examining
+        the degree of use of artificial
+        intelligence in different age groups.</p>
 </body>
 
 </html>
