--- a/Nowy folder/AI.html
+++ b/Nowy folder/AI.html
@@ -124,7 +124,7 @@
 
     <h2>Survey</h2>
 
-    <p>Please <a href="file:///C:/Users/aleks/Desktop/Nowy%20folder%20(5)/survey.html">fill out the survey</a> to share your input.</p>
+    <p>Please <a href="file:///C:/Users/s-A014-15.CAMPUS.000/Downloads/survey.html">fill out the survey</a> to share your input.</p>
     <form action="#" method="post">
 
     <p>Here is a survey about your knowledge
